Edits to 01-soil.Rmd.

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 figs\classify_organisms.odg
 figs\classify_organisms.pdf
 figs\classify_organisms.png
+figs\sparks_al_species_plot_fig9-2.png
+figs\sparks_al_species_plot_fig9-8.pdf
 
